--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -85,7 +85,7 @@
           {%- if forloop.last and author_array_limit == author_array_size %}and {% endif -%}
         {% endif %}
         {%- if author_is_self -%}
-          <em>
+          <em style="text-decoration: underline;">
             {{- author.first }}
             {{ author_last_html -}}
           </em>
